JumpScript/tests/baselines/reference/parserTypeAssertionInObjectCreationExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1.jump(1,5): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1.jump(1,6): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1.jump(1,8): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1.jump (3 errors) ====
    new <T>Foo()
        ~
!!! error TS1109: Expression expected.
         ~
!!! error TS2304: Cannot find name 'T'.
           ~~~
!!! error TS2304: Cannot find name 'Foo'.